Fix z-indexing issues for stat tooltips

--- a/src/components/common/stat/Stat.css
+++ b/src/components/common/stat/Stat.css
@@ -104,3 +104,8 @@
 .tooltipIcon>img {
   width: 0.9em;
 }
+
+.StatTooltipWrapper {
+  z-index: 1;
+  position: relative;
+}
